# Explorer3D

./: CMakeLists.txt  LICENSE  log.cxx  m44.cxx  main.cxx  readme.md  trig.cxx
includes/: log.h  m44.h  trig.h
